3 things have done.
- chore(ci) Update yml's config. Deny history
- refactor(en,zh-hans) Move CONTRIBUTION.md
- docs(README) Update README's description about Submit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: _book
-  keep-history: true
+  keep-history: false
   on:
     branch: master
